[gd_scene load_steps=6 format=3 uid="uid://cgrccjljrmrxe"]

[ext_resource type="PackedScene" uid="uid://dlqwixs38k8to" path="res://Scenes/Instances/button.tscn" id="1_b8k4b"]
[ext_resource type="Script" path="res://Scripts/options.gd" id="1_dyvjv"]
[ext_resource type="PackedScene" uid="uid://iwobpbturntd" path="res://Scenes/options_graphics.tscn" id="2_rv63m"]
[ext_resource type="PackedScene" uid="uid://bvkbdhlhmol3b" path="res://Scenes/options_sounds.tscn" id="3_eioc1"]
[ext_resource type="PackedScene" uid="uid://ca2s366vlqew7" path="res://Scenes/options_controls.tscn" id="4_b4lsc"]

[node name="Options" type="Control"]
layout_mode = 3
anchor_left = -0.008
anchor_top = -0.008
anchor_right = 0.315
anchor_bottom = 0.146
offset_left = 4.8
offset_top = 6.4
offset_right = -189.0
offset_bottom = -116.8
script = ExtResource("1_dyvjv")
graphics = ExtResource("2_rv63m")
sounds = ExtResource("3_eioc1")
controls = ExtResource("4_b4lsc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 184.0
offset_bottom = 208.0

[node name="Graphics" parent="VBoxContainer" instance=ExtResource("1_b8k4b")]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Graphics"

[node name="Sounds" parent="VBoxContainer" instance=ExtResource("1_b8k4b")]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Sounds
"

[node name="Controls" parent="VBoxContainer" instance=ExtResource("1_b8k4b")]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Controls
"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Back" parent="VBoxContainer" instance=ExtResource("1_b8k4b")]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="VBoxContainer/Sounds" to="." method="_on_sounds_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
